dynamic overall score color change by their number

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -524,3 +524,7 @@ input[type="checkbox"]:checked {
   margin: 0;
   position: relative;
 }
+
+.read-less-more-btn{
+  color: var(--secondary-color);
+}
