--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -386,7 +386,7 @@
   gap: 10px;
   padding: 8px 15px;
   border-top: 1px solid #ddd;
-  align-items: center;
+  align-items: baseline;
 }
 
 .product-listing-inner-content-table-accordion .inline-ranking-section img{
@@ -791,8 +791,8 @@
 }
 
 .best-product-listing .product-listing-inner-content .pros-corns-section ul li {
-  padding: 4px 0 2px;
-  font-size: 14px !important;
+  padding: 5px 0 5px;
+  font-size: 15px !important;
 }
 
 
@@ -1174,6 +1174,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
   gap: 5px;
   color: var(--heading-color);
   font-family: 'Lato', sans-serif !important;
+  opacity: 80%;
 }
 .product-listing-inner-content .score-section .score-detail span {
   font-size: 15px !important;
