--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -622,3 +622,8 @@ body .best-product-listing .product-listing-inner-content .product-score-contain
   font-size: 16px !important;
   line-height: 30px !important;
 }
+
+/*  */
+.best-product-listing .product-listing-inner-content .pros-corns-section.pros ul, .best-product-listing .product-listing-inner-content .pros-corns-section.corns ul{
+  margin-bottom: 15px !important;
+}
