--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -97,7 +97,7 @@
 .blog-slider img, 
 .cardsGrid .blog-card .card-img {
     width: 100%;
-    height: 230px;
+    height: 150px;
     border-radius: 5px;
     object-fit: cover;
     transition: .5s;
@@ -123,6 +123,7 @@
     bottom: 0;
     right: 10px;
     border-radius: 5px 5px 0 0;
+    display: none;
 }
 .blog-card .category, 
 .cardsGrid .blog-card .category{
