--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css");
 /* @import url("../../public/font/font.css"); */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("./styles/style.css");
 @import url("./styles/product.css");
 @import url("./styles/blog.css");
@@ -23,7 +23,7 @@
 body {
   /* font-family: "BR Hendrix Medium" !important; */
   /* font-family: "Arial" !important; */
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   margin: 0;
   padding: 0;
 }
@@ -44,11 +44,11 @@ h4,
 h5,
 h6 {
   margin: 0 !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
-h1{
-  font-size:34px !important;
+h1 {
+  font-size: 34px !important;
   font-weight: 400 !important;
 }
 
@@ -57,42 +57,45 @@ h1{
   font-weight: 400 !important;
 } */
 
-h3{
-  font-size:26px !important;
+h3 {
+  font-size: 26px !important;
   font-weight: 400 !important;
 }
 
-h4{
-  font-size:22px !important;
+h4 {
+  font-size: 22px !important;
   font-weight: 400 !important;
 }
 
 p {
   margin: 0 !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   font-weight: 500 !important;
 }
 
-span, ul li, label, button{
-  font-family: 'Lato', sans-serif !important;
+span,
+ul li,
+label,
+button {
+  font-family: "Lato", sans-serif !important;
 }
 
-button{
-  font-family: 'Lato', sans-serif !important;
+button {
+  font-family: "Lato", sans-serif !important;
   font-weight: 600 !important;
-} 
+}
 
 ul,
 ol {
   list-style: none !important;
   padding: 0 !important;
   margin: 0 !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 a {
   text-decoration: none !important;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 input:focus,
@@ -114,7 +117,7 @@ select {
 .ptb-80 {
   padding: 40px 0;
 }
-.ptb-25{
+.ptb-25 {
   padding: 25px 0px 0px 0px;
 }
 /* header {
@@ -160,7 +163,7 @@ select {
 }
 
 .site_main_btn:hover {
-  background:#326ebf !important;
+  background: #326ebf !important;
   color: #fff !important;
   border: 1px solid #326ebf !important;
 }
@@ -237,7 +240,6 @@ select {
   justify-content: center;
   background: rgba(67, 126, 206, 0.1);
   border-radius: 50px;
-  
 }
 
 .question-marker-icon svg {
@@ -303,48 +305,52 @@ input[type="checkbox"]:checked {
   }
 }
 
-.dark-color{
+.dark-color {
   background: var(--heading-color);
 }
 
-.light-bg-color{
+.light-bg-color {
   background: rgba(244, 247, 251, 0.6) !important;
 }
 
 .site-card-active {
   box-shadow: 0px 2px 8px rgba(77, 82, 136, 0.15);
-  background: linear-gradient(0deg, transparent 30%, rgb(67 126 206) 100%) !important;
+  background: linear-gradient(
+    0deg,
+    transparent 30%,
+    rgb(67 126 206) 100%
+  ) !important;
 }
 
-.swiper .swiper-wrapper{
+.swiper .swiper-wrapper {
   padding: 2px 0;
 }
 
 .content-para p {
   padding: 0 0 20px;
 }
-.home .hero-searchbar .search-btn:hover{
+.home .hero-searchbar .search-btn:hover {
   background: #326ebf !important;
   color: #fff;
 }
-.electronics{
- position: relative;
- transition: width linear 0.2s;
+.electronics {
+  position: relative;
+  transition: width linear 0.2s;
 }
-.electronics::after{
+.electronics::after {
   content: " ";
-    width: 0%;
-    height: 2px;
-    border-radius: 100px;
-    position: absolute;
-    left: 50%;
-    background: #fff;
-    transform: translateX(-50%);
-    z-index: 999;
-    bottom: 33%;
-    transition: width linear 0.2s;
+  width: 0%;
+  height: 2px;
+  border-radius: 100px;
+  position: absolute;
+  left: 50%;
+  background: #fff;
+  transform: translateX(-50%);
+  z-index: 999;
+  bottom: 33%;
+  transition: width linear 0.2s;
 }
-.electronics:hover::after{
+.electronics:hover::after {
   width: 13.5%;
 }
 .custom-switch .custom-control-input:checked ~ .custom-control-label::before {
@@ -352,11 +358,11 @@ input[type="checkbox"]:checked {
 }
 
 .custom-switch .custom-control-label::before {
-  border: 1px solid grey; 
+  border: 1px solid grey;
 }
 
-.listing-container .hide-show-btn{
-  background: #F4F7FB !important;
+.listing-container .hide-show-btn {
+  background: #f4f7fb !important;
   position: relative;
   text-transform: capitalize !important;
   border-radius: 3px;
@@ -372,55 +378,55 @@ input[type="checkbox"]:checked {
   z-index: 99;
   margin: -15px auto -15px;
   background-color: white;
-
 }
 
-.listing-container .hide-show-btn i{
+.listing-container .hide-show-btn i {
   font-size: 25px;
 }
 
-.listing-container{
+.listing-container {
   width: 100%;
   background-image: linear-gradient(90deg, #f8fafc 50%, #ffffff 50%);
   background-repeat: no-repeat;
-
 }
-.best-product-listing .product-listing-inner-content .listing-container .col{
+.best-product-listing .product-listing-inner-content .listing-container .col {
   width: 50%;
   display: inline-block;
   vertical-align: text-top;
-
 }
-.best-product-listing .product-listing-inner-content .listing-container .col:last-child{
+.best-product-listing
+  .product-listing-inner-content
+  .listing-container
+  .col:last-child {
   border-right: 0px;
 }
 .listing-container #pros,
-.listing-container #cons{
+.listing-container #cons {
   height: 100%;
   overflow: hidden;
   transition: all 1s linear;
   background-color: transparent !important;
 }
-.not-availabel{
+.not-availabel {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    height: 200px;
-    gap: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  height: 200px;
+  gap: 10px;
 }
-.not-availabel .txt{
- font-size: 14px;
- font-style: italic;
- font-weight: 600;
+.not-availabel .txt {
+  font-size: 14px;
+  font-style: italic;
+  font-weight: 600;
 }
-.not-availabel .price{
+.not-availabel .price {
   padding: 5px 10px;
   border-radius: 100px;
   text-align: center;
   font-size: 14px;
-  background-color: #D90808;
+  background-color: #d90808;
   width: 72px;
   color: #fff;
   font-weight: 600;
@@ -487,26 +493,25 @@ input[type="checkbox"]:checked {
   visibility: visible;
 } */
 
-
-.color-section{
+.color-section {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
 }
 
-.color-section .color-item{
+.color-section .color-item {
   position: relative;
-    background: #F4F7FB;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 13px;
-    line-height: 30px;
-    color: var(--secondary-color);
-    font-weight: 700;
-    cursor: pointer;
+  background: #f4f7fb;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 13px;
+  line-height: 30px;
+  color: var(--secondary-color);
+  font-weight: 700;
+  cursor: pointer;
 }
 
-.color-section .color-item input{
+.color-section .color-item input {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -520,8 +525,8 @@ input[type="checkbox"]:checked {
   background: transparent !important;
 }
 
-.color-section .color-item label:before{
-  content: '';
+.color-section .color-item label:before {
+  content: "";
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -537,60 +542,75 @@ input[type="checkbox"]:checked {
   border: 1px solid var(--secondary-color);
 }
 
-.color-section .color-item label{
+.color-section .color-item label {
   position: relative;
   display: block;
   padding: 0px 8px;
-  background: #F4F7FB;
+  background: #f4f7fb;
   border-radius: 5px;
 }
 
-.color-section .color-item input:checked + label:before, .color-section .color-item input:hover + label:before{
+.color-section .color-item input:checked + label:before,
+.color-section .color-item input:hover + label:before {
   opacity: 1;
   visibility: visible;
 }
 
-.color-section .color-item .form-check.form-check-inline{
+.color-section .color-item .form-check.form-check-inline {
   padding: 0;
   margin: 0;
   position: relative;
 }
 
-.read-less-more-btn{
+.read-less-more-btn {
   color: var(--secondary-color);
   cursor: pointer;
 }
 
-.best-product-listing .product-listing-inner-content .product-score-container .score-section:before{
+.best-product-listing
+  .product-listing-inner-content
+  .product-score-container
+  .score-section:before {
   display: none;
 }
 
-.best-product-listing .product-listing-inner-content .product-score-container .score-section:first-child::before{
+.best-product-listing
+  .product-listing-inner-content
+  .product-score-container
+  .score-section:first-child::before {
   display: block !important;
 }
 
-body .best-product-listing .product-listing-inner-content .product-score-container{
+body
+  .best-product-listing
+  .product-listing-inner-content
+  .product-score-container {
   gap: 0 !important;
 }
 
-.best-product-listing .product-listing-inner-content .product-score-container .score-section:first-child{
+.best-product-listing
+  .product-listing-inner-content
+  .product-score-container
+  .score-section:first-child {
   margin: 0 0 18px;
 }
 
-.best-product-listing .product-listing-inner-content .product-score-container .score-section{
+.best-product-listing
+  .product-listing-inner-content
+  .product-score-container
+  .score-section {
   margin: 0 0 2px;
 }
 
-@media (min-width:1201px){
+@media (min-width: 1201px) {
   .listing-container {
     width: 50%;
-}
+  }
 }
 
-.table-accordion .accordion-button  div.table-accordion-header{
+.table-accordion .accordion-button div.table-accordion-header {
   width: calc(50% - 50px);
 }
-
 
 .ranking-item-list-sec {
   display: flex;
@@ -605,15 +625,23 @@ body .best-product-listing .product-listing-inner-content .product-score-contain
   opacity: 70%;
 } */
 
-.best-product-listing .product-listing-inner-content .pros-corns-section ul.pros_crons_open:after{
+.best-product-listing
+  .product-listing-inner-content
+  .pros-corns-section
+  ul.pros_crons_open:after {
   display: none;
 }
-.best-product-listing .product-listing-inner-content .product-score-container .score-section .score-detail .overall{
-  opacity: 100% !important; 
+.best-product-listing
+  .product-listing-inner-content
+  .product-score-container
+  .score-section
+  .score-detail
+  .overall {
+  opacity: 100% !important;
 }
 
-
-.x  {background: #ff8f0b;
+.x {
+  background: #ff8f0b;
   border-radius: 50px;
   color: var(--white-color);
   text-align: center;
@@ -624,6 +652,13 @@ body .best-product-listing .product-listing-inner-content .product-score-contain
 }
 
 /*  */
-.best-product-listing .product-listing-inner-content .pros-corns-section.pros ul, .best-product-listing .product-listing-inner-content .pros-corns-section.corns ul{
+.best-product-listing
+  .product-listing-inner-content
+  .pros-corns-section.pros
+  ul,
+.best-product-listing
+  .product-listing-inner-content
+  .pros-corns-section.corns
+  ul {
   margin-bottom: 15px !important;
 }
