--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -663,7 +663,36 @@ body
   margin-bottom: 15px !important;
 }
 
-
-.productSlider-Container .heading-primary{
+.productSlider-Container .heading-primary {
   font-size: 18px !important;
+}
+
+.author-page-section {
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: #fff;
+  width: fit-content;
+  float: right;
+  margin: 0 10px 10px;
+}
+
+.author-page-section img {
+  width: 190px;
+  height: 190px;
+  border-radius: 100px;
+  object-fit: cover;
+  object-position: center;
+  margin: 20px;
+  padding: 10px;
+}
+
+.author-page-section-footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 180%;
+  padding: 5px;
 }
