--- a/src/app/styles/blog.css
+++ b/src/app/styles/blog.css
@@ -425,7 +425,7 @@ button.view-blog i{
 .fonzi .profile{
     /* padding: 10px; */
     display: flex;
-    align-items: center;
+    align-items: baseline;
     gap: 10px;
 }
 .fonzi .profile .avatar img{
@@ -441,11 +441,13 @@ button.view-blog i{
     width: 50px;
     height: 50px;
     border-radius: 100px;
+    min-width: 50px;
 }
 .fonzi p{
     line-height: 1.7;
     font-size: 18px;
      color: rgba(39, 48, 78, 0.9);
+     word-break: break-all;
 }
 .form-container p{
     /* line-height: 1.7; */
