--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -696,3 +696,25 @@ body
   line-height: 180%;
   padding: 5px;
 }
+
+.contentSec .hide-show-btn {
+  background: #f4f7fb !important;
+  position: relative;
+  text-transform: capitalize !important;
+  border-radius: 3px;
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--secondary-color) !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 22px;
+  border: 1px solid var(--secondary-color) !important;
+  z-index: 99;
+  margin: 10px auto -15px;
+  background-color: white;
+}
+.contentSec .hide-show-btn i {
+  font-size: 25px;
+}
