--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -513,6 +513,7 @@ footer .search-icon{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 5px ;
 }
 
 .review-card .footer_content p {
