--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1357,3 +1357,48 @@ padding: 4px 15px;
 .product_listing_table table tr th{
   text-align:left !important;
 }
+
+.question_hover_container{
+  position: relative;
+  z-index: 10000;
+}
+
+.question_hover_container .display-content {
+  display: none;
+  position: absolute;
+  width: 260px;
+  background: #f5f5f5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 100;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 10px 18px;
+  text-align: left;
+  bottom: 100%;
+  left: 5px;
+  color: rgb(39 48 78 / 70%);
+  line-height: 20px;
+  z-index: 10000;
+}
+
+.question_hover_container:hover .display-content {
+  display: block;
+}
+
+.scroe_section{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin: 5px 0;
+}
+
+.scroe_section .score-count{
+  font-size: 14px !important;
+    line-height: 18px !important;
+    min-width: 45px;
+    text-align: center;
+    padding: 4px 8px !important;
+    background: rgb(9, 54, 115);
+    color: #fff;
+    border-radius: 5px;
+}
