--- a/src/app/styles/product.css
+++ b/src/app/styles/product.css
@@ -526,7 +526,7 @@
   font-size: 16px;
   line-height: 16px;
   color: var(--heading-color);
-  opacity: 90%;
+  /* opacity: 90%; */
 }
 
 .table-accordion .spec-section:nth-child(odd) .spec-item {
