bullter points changes

--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -1133,7 +1133,7 @@ body .product-listing-inner-content .score-section .score-detail h6 {
     display: block;
 } */
 .pros-corns-section.corns ul li::before{
-  content: url(/images/close.svg)!important;
+  /* content: url(/images/close.svg)!important; */
   position: absolute;
   right: 100%;
   top: 8px !important;
