--- a/src/app/styles/best-page.css
+++ b/src/app/styles/best-page.css
@@ -39,8 +39,10 @@
   font-size: 15px;
   line-height: 25px;
   color: var(--heading-color);
-  opacity: 90%;
+  /* opacity: 90%; */
   font-family: "BR Hendrix Medium";
+  position: relative;
+  z-index: 1;
 }
 
 .compare-container thead tr th:not(:first-child),
@@ -1395,6 +1397,36 @@ padding: 4px 15px;
 .question_hover_container:hover .display-content {
   display: block;
 }
+
+.tooltip-title{
+  position: relative;
+  width: fit-content !important;
+  cursor: help;
+  border-bottom : 2px dotted;
+}
+
+.tooltip-title:hover .tooltip-display-content {
+  display: block;
+}
+
+.tooltip-display-content {
+  display: none;
+  position: absolute;
+  width: 250px;
+  background: #f5f5f5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 100;
+  font-weight: 400;
+  font-size: 14px;
+  padding: 10px 18px;
+  text-align: left;
+  bottom: 100%;
+  left: 5px;
+  color: rgb(39 48 78 / 70%);
+  line-height: 20px;
+  z-index: 10000;
+}
+
 
 .scroe_section{
   display: flex;
